--- a/styles/app.css
+++ b/styles/app.css
@@ -5,10 +5,12 @@
   border-radius: 5px;
   height: 140px;
   margin-right: 20px;
+  background-size: contain;
 }
 
 .covered {
   background-color: black;
+  background-color: url('img/card-back.png');
 }
 
 .hand {
